--- a/lesson1/Lesson 1.css
+++ b/lesson1/Lesson 1.css
@@ -1,5 +1,21 @@
 
+h2 {
+    background: silver;
+}
 
+#bs {
+    color: #b64f4f;
+}
+
+.xxx {
+    color: rgb(111, 44, 44);
+}
+
+
+.pic {
+    width: 300px;
+    height: 300px;
+}
 
 
 
